--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             <div>
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum sed cumque quibusdam accusantium at a quisquam! Rem quos nobis laborum repudiandae ab eum molestiae dolor voluptatum saepe, asperiores magnam.</h3>         
             </div>
+            <p id="photo" style="float:right;color:red;width:50px;"></p>
        </section>
     </main>
     <!-- <footer>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo tempora aspernatur deleniti nemo aperiam sed blanditiis, nesciunt earum in perspiciatis repellat quis ipsa fuga unde qui, quam ullam nisi vero.</p>
     </footer> -->
+<script src="app.js"></script>
 </body>
 </html>
