apply forloop&while

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <div>
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum sed cumque quibusdam accusantium at a quisquam! Rem quos nobis laborum repudiandae ab eum molestiae dolor voluptatum saepe, asperiores magnam.</h3>         
             </div>
-            <p id="photo" style="float:right;color:red;width:50px;"></p>
+           <ul id="ul-bigphoto">
+              
+            </ul>
        </section>
     </main>
     <!-- <footer>
