--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
        </section>
 
        <section class="big-photo">
-            <div>
-                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum sed cumque quibusdam accusantium at a quisquam! Rem quos nobis laborum repudiandae ab eum molestiae dolor voluptatum saepe, asperiores magnam.</h3>         
+             <!-- <div>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum sed cumque quibusdam accusantium at a quisquam! </h3> 
+            </div> -->
+            <div class="img-bigphoto">
+                <div style="width: 16%;height: 30%;margin-top:20px;margin-right: 10px;" id="div-photo">
+             
             </div>
-            <p id="photo" style="float:right;color:red;width:50px;"></p>
+            <ul id="ul-bigphoto">
+              
+            </ul>
        </section>
     </main>
     <!-- <footer>
